# llvm-obfuscator

./: .gitignore  CMakeLists.txt  README.md  env-vars
demo/donut/: compile.sh  donut.ll  donut_deobfuscated.c
docs/: 01.tex  02.tex  03.tex  04.tex  05.tex  Makefile  abstract.tex  bibliography.bib  paper.tex
include/: BlockExtractor.h  BogusFlowIntroduceLoop.h  BranchFunction.h  CallObfuscation.h  ConstantObfuscation.h  ControlFlowFlattening.h  JumpIntoLoop.h  MergeFuncs.h  OpaquePredicates.h  RNG.h  ReachableIntegersAnalysis.h  StringObfuscation.h  StringStateMachine.h  Substitution.h  Utils.h
include/cmd-args/: Coverage.h
input/additions/8bit-example/: compile.sh
input/additions/ex1/: compile.sh  ex1.cpp
input/and/ex1/: compile.sh
input/block-extraction/ex1/: compile.sh
input/block-extraction/ex2/: compile.sh
input/block-extraction/ex3/: compile.sh
input/block-extraction/ex4/: compile.sh
input/block-extraction/ex5/: compile.sh
input/block-extraction/ex8/: compile.sh  ex8.cpp
input/block-extraction/ex9/: compile.sh  ex9.cpp
input/branch-function/ex1/: compile.sh  ex1.cpp
input/branch-function/ex2/: compile.sh  ex2.cpp
input/branch-function/ex3/: compile.sh
input/branch-function/ex4/: compile.sh  ex4.cpp
input/branch-function/ex5/: compile.sh
input/branch-function/ex6/: compile.sh
input/branch-function/ex7/: compile.sh
input/call-obfuscation/ex1/: compile.sh  ex1.cpp
input/call-obfuscation/ex2/: compile.sh  ex2.cpp
input/call-obfuscation/ex3/: compile.sh  ex3.cpp
input/call-obfuscation/ex4/: compile.sh  ex4.cpp
input/call-obfuscation/ex5/: compile.sh
input/call-obfuscation/ex6/: compile.sh
input/call-obfuscation/ex7/: compile.sh  ex7.cpp
input/cff/ex1/: compile.sh  ex1.cpp
input/cff/ex2/: compile.sh
input/cff/ex3/: compile.sh
input/cff/ex4/: compile.sh
input/cff/ex5/: compile.sh  ex5.cpp
input/cff/ex6/: compile.sh
input/cff/ex7/: compile.sh
input/const-obfuscation/ex1/: compile.sh  ex1.cpp
input/const-obfuscation/ex2/: compile.sh
input/const-obfuscation/ex3/: compile.sh
input/const-obfuscation/ex4/: compile.sh
input/const-obfuscation/ex5/: compile.sh
input/const-obfuscation/ex7/: compile.sh
input/const-obfuscation/ex8/: compile.sh
input/const-obfuscation/ex9/: compile.sh
input/introduce-loop/ex1/: compile.sh  ex1.cpp
input/introduce-loop/ex4/: compile.sh
input/introduce-loop/ex5/: compile.sh
input/introduce-loop/ex7/: compile.sh
input/introduce-loop/ex8/: compile.sh
input/introduce-loop/ex9/: compile.sh  ex9.cpp
input/jump-into-loop/ex1/: compile.sh  ex1.cpp
input/jump-into-loop/ex2/: compile.sh  ex2.cpp
input/jump-into-loop/ex3/: compile.sh  ex3.cpp
input/jump-into-loop/ex4/: compile.sh
input/jump-into-loop/ex5/: compile.sh
input/jump-into-loop/ex7/: compile.sh  ex7.cpp
input/jump-into-loop/ex8/: compile.sh
input/jump-into-loop/ex9/: compile.sh
input/merge-funcs/ex1/: compile.sh  ex1.cpp
input/merge-funcs/ex2/: compile.sh  ex2.cpp
input/merge-funcs/ex3/: compile.sh  ex3.cpp
input/merge-funcs/ex4/: compile.sh  ex4.cpp
input/merge-funcs/ex5/: compile.sh  ex5.cpp
input/opaque-predicates/ex1/: compile.sh  ex1.cpp
input/opaque-predicates/ex2/: compile.sh  ex2.cpp
input/opaque-predicates/ex3/: compile.sh
input/opaque-predicates/ex4/: compile.sh
input/opaque-predicates/ex5/: compile.sh  ex5.cpp
input/opaque-predicates/ex7/: compile.sh
input/opaque-predicates/ex8/: compile.sh
input/opaque-predicates/ex9/: compile.sh
input/or/ex1/: compile.sh
input/string-obfuscation/ex1/: compile.sh  ex1.cpp
input/subtractions/ex1/: compile.sh
input/xors/ex1/: compile.sh  ex1.cpp
lib/: BlockExtractor.cpp  BogusFlowIntroduceLoop.cpp  BranchFunction.cpp  CMakeLists.txt  CallObfuscation.cpp  ConstantObfuscation.cpp  ControlFlowFlattening.cpp  JumpIntoLoop.cpp  MergeFuncs.cpp  OpaquePredicates.cpp  ReachableIntegersAnalysis.cpp  StringObfuscation.cpp  Substitution.cpp
lib/cmd-args/: Coverage.cpp
output/additions/8bit-example/: 8bit.ll  substitution.ll
output/additions/ex1/: ex1.ll  substitution.ll
output/and/ex1/: ex1.ll  substitution.ll
output/block-extraction/ex1/: bext.ll  ex1.ll
output/block-extraction/ex2/: bext.ll  ex2.ll
output/block-extraction/ex3/: bext.ll  ex3.ll
output/block-extraction/ex4/: bext.ll  ex4.ll
output/block-extraction/ex5/: bext.ll  ex5.ll
output/block-extraction/ex8/: bext.ll  ex8.ll
output/block-extraction/ex9/: bext.ll  ex9.ll
output/branch-function/ex1/: bf.ll  ex1.ll
output/branch-function/ex2/: bf.ll  ex2.ll
output/branch-function/ex3/: bf.ll  ex3.ll
output/branch-function/ex4/: bf.ll  ex4.ll
output/branch-function/ex5/: bf.ll  ex5.ll
output/branch-function/ex6/: bf.ll  ex6.ll
output/cff/ex1/: cff.ll  (+1 more)
tests/: test.sh  test_bext.py  test_branchf.py  test_callobfs.py  test_cff.py  test_cobfs.py  test_fakeloop.py  test_loopjump.py  test_mergef.py  test_opaque.py  test_strobfs.py  test_substitution.py  test_substitution.sh
(+183 files in other folders)
